styles/main.scss
---
---

// colors

$color-primary: black;
$color-primary-low: #ed5361;
$color-secondary: white;
$color-secondary-low: #99cc66;
$color-tertiary: purple;
$color-tertiary-low: #4099d4;
$color-quadrary: blue;
$color-quadrary-low: #f6db87;
$color-text: hsl(0, 0%, 5%);
$color-text-low: hsl(0, 0%, 65%);
$color-text-inverse: hsl(0, 0%, 95%);

$bp-text-breaks-column: 'screen and (min-width: 55em)';
$font-main:	"brandon-grotesque", sans-serif;

$z-top: 5;
$z-bottom: -5;

// control the FOUT
.wf-loading {
  visibility: hidden;
}

.wf-active {
  visibility: visible;
}

// base styles

body {
  background-color: #f7e4ef;
  background-size:
    auto,
    cover;
  color: black;
  font-family: $font-main;
  font-size: 1.25em;
  font-style: normal;
  font-weight: 400;
  margin: 1em 1em 4em;
}

strong,
b {
  font-family: $font-main;
  font-style: bold;
  font-weight: 700;
  color: purple;
}

a {
  color: black;

  &:link {
    color: purple;
    text-decoration: none
  }
  &:visited {
    color: purple;
  }
  &:hover {
    color: black;
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  font-family: $font-main;
  font-style: normal;
  font-weight: 400;
}

h2 {
 text-align: left;
 font-family: $font-main;
 font-size: 20px;
 font-weight: bold;
 line-height: 18px;
}

h4 {
  font-size: 16px;
  margin: 0px;
}

h5 {
  font-weight: normal;
  font-size: 14px;
  text-transform: uppercase;
  margin: 0px;
  line-height: 0px;
}

%font-style-paragraph {
  font-family: $font-main;
  font-size: 16px;
  line-height: 18px;
}

p {
  @extend %font-style-paragraph;
}

img {
  border-radius: .25em;
  max-width: 100%;

  article & {
    display: block;
    margin: 0 auto;
  }
}

// Helpers

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

// Blocks

.container {
  position: relative;
  z-index: $z-top;
  margin: 0 auto;
  max-width: 30em;
}

.header-logo {
  opacity: 1;
  width: 125%;

  @media #{$bp-text-breaks-column} {
    margin-left: -25%;
    max-width: none;
    width: 150%;
  }
}

.header-subtitle {
  color: white;
  font-size: 50pt;
  font-weight: bold;
  line-height: .8;
  margin-bottom: 30pt;
  text-align: left;
  text-transform: uppercase;

  @media #{$bp-text-breaks-column} {
    font-size: 3em;
    margin-top: -1.5em;
  }
}

.img-right {
  float: right;
  margin: 0 0 1em 1em;
  width: 33%;
}


.weekend {
  ul li {
    @extend %font-style-paragraph;

    strong {
      font-family: $font-main;
      font-size: 18px;
    }

  }
}

.weekend--past {
  color: $color-text-low;

  a {
    opacity: .5;
  }

  strong {
    font-family: $font-main;
    font-color: $color-primary;
    opacity: .5;
  }

  > h2 {
    color: $color-text-low;
  }

  img {
    opacity: 0.35;
  }
}

.weekend--next {
  background-color: rgba(255, 255, 255, .5);
  padding: 1em 1em;
  margin: 1em 0em;

}

.mainnav {
  margin: .5em;
  text-align: right;
}

.mainnav-item {
  padding: .5em;
  text-transform: uppercase;
  color: black;
  }


.scene {
  z-index: $z-bottom;
}

.article {
  margin-bottom: 8em;
}

.accordion-toggle {
  cursor: pointer;
  margin: 0;
}
.accordion-toggle:hover {
  color: black;
}
.accordion-content {display: none;}
.accordion-content.default {display: block;}


.img {
  position: absolute;
  height: 100000px;
  width: 100000px;
  top: -8500px;
  left: -8000px;
  animation-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750);
  animation-name: float;
  animation-iteration-count: infinite;
}

#img-1 {
  opacity: 0.2;
  background: url('https://static1.squarespace.com/static/5211f74fe4b069f3d80a6f4a/t/56d7625301dbae7a6d78adf6/1456955988945/DiehardPollen_petalsfloat1.png');
  background-repeat: repeat;
  animation-duration: 1800s;
}

#img-2 {
  opacity: 0.03;
  background: url('https://static1.squarespace.com/static/5211f74fe4b069f3d80a6f4a/t/56d754801bbee06258b93863/1456952449516/Diehard_dust2_zps9on59cjb.jpg');
  background-repeat: repeat;
  animation-duration: 350s;
}

#img-3 {
  opacity: 0.5;
  background: url('https://static1.squarespace.com/static/5211f74fe4b069f3d80a6f4a/t/56d764972eeb81e5306bd1b4/1456956571962/DiehardPollen_petalsfloat2.png');
  background-repeat: repeat;
  animation-duration: 700s;
}

@keyframes float {
  0% {
    transform: translate(0px, 0px);
  }
  100% {
    transform: translate(5000px, 4000px);
  }
}

